// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ApiDetailsPage correctly with apiItem 1`] = `
<main
  className="container"
  id="content"
>
  <article>
    <div
      className="row"
    >
      <div
        className="col-12 col-lg-8 offset-lg-4"
      >
        <SideEffect(DocumentMeta)
          description="Provides a basic search api against the National Data Directory of Norway"
          title="National Data Directory Search API"
        />
        <HarvestDate
          harvest={null}
        />
        <SearchHitHeader
          nationalComponent={false}
          publisher={null}
          publisherItems={null}
          publisherLabel="Provider:"
          publisherTag="strong"
          tag="h1"
          theme={null}
          title="National Data Directory Search API"
          titleLink={null}
        />
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-12 col-lg-4 "
      >
        <StickyMenu
          menuItems={
            Array [
              Object {
                "name": "National Data Directory Search API",
                "prefLabel": "Description",
              },
              Object {
                "name": "Operations",
                "prefLabel": "Operations",
              },
              Object {
                "name": "Terms and restrictions",
                "prefLabel": "Terms and restrictions",
              },
              Object {
                "name": "Contact information",
                "prefLabel": "Contact information",
              },
            ]
          }
        />
      </div>
      <section
        className="col-12 col-lg-8 mt-3"
      >
        <ShowMore
          contentHtml="Provides a basic search api against the National Data Directory of Norway"
          label=""
          showLessButtonText="Show less"
          showMoreButtonText="Show the full description"
        />
        <ApiEndpoints
          apiDocUrl={null}
          apiSpecUrl="/api/apis/c541c305-4e4f-43ed-be3e-5434740ec1b5/spec"
          name="Operations"
          paths={
            Object {
              "/aggregateDataset": Object {
                "get": Object {
                  "responses": Object {
                    "200": Object {
                      "description": "OK",
                    },
                    "401": Object {
                      "description": "Unauthorized",
                    },
                    "403": Object {
                      "description": "Forbidden",
                    },
                    "404": Object {
                      "description": "Not Found",
                    },
                  },
                },
              },
              "/catalogs": Object {
                "get": Object {
                  "description": "The three formats are: text/turtle, application/ld+json and application/rdf+xml",
                  "responses": Object {
                    "200": Object {
                      "description": "OK",
                    },
                    "401": Object {
                      "description": "Unauthorized",
                    },
                    "403": Object {
                      "description": "Forbidden",
                    },
                    "404": Object {
                      "description": "Not Found",
                    },
                  },
                },
              },
              "/catalogs/datasets": Object {
                "get": Object {
                  "description": "The three formats are: text/turtle, application/ld+json and application/rdf+xml",
                  "responses": Object {
                    "200": Object {
                      "description": "OK",
                    },
                    "401": Object {
                      "description": "Unauthorized",
                    },
                    "403": Object {
                      "description": "Forbidden",
                    },
                    "404": Object {
                      "description": "Not Found",
                    },
                  },
                },
              },
              "/datasets": Object {
                "get": Object {
                  "description": "Returns a list of matching datasets wrapped in a elasticsearch response. Max number returned by a single query is 100. Size parameters greater than 100 will not return more than 100 datasets. In order to access all datasets, use multiple queries and increment from parameter.",
                  "responses": Object {
                    "200": Object {
                      "description": "OK",
                    },
                    "401": Object {
                      "description": "Unauthorized",
                    },
                    "403": Object {
                      "description": "Forbidden",
                    },
                    "404": Object {
                      "description": "Not Found",
                    },
                  },
                },
              },
              "/datasets/**": Object {
                "get": Object {
                  "description": "You must specify the dataset's identifier",
                  "responses": Object {
                    "200": Object {
                      "description": "OK",
                    },
                    "401": Object {
                      "description": "Unauthorized",
                    },
                    "403": Object {
                      "description": "Forbidden",
                    },
                    "404": Object {
                      "description": "Not Found",
                    },
                  },
                },
              },
              "/harvest/catalog": Object {
                "get": Object {
                  "responses": Object {
                    "200": Object {
                      "description": "OK",
                    },
                    "401": Object {
                      "description": "Unauthorized",
                    },
                    "403": Object {
                      "description": "Forbidden",
                    },
                    "404": Object {
                      "description": "Not Found",
                    },
                  },
                },
              },
              "/publisher": Object {
                "get": Object {
                  "description": "Returns the elasticsearch response with matching publishers",
                  "responses": Object {
                    "200": Object {
                      "description": "OK",
                    },
                    "401": Object {
                      "description": "Unauthorized",
                    },
                    "403": Object {
                      "description": "Forbidden",
                    },
                    "404": Object {
                      "description": "Not Found",
                    },
                  },
                },
              },
              "/publisher/hierarchy": Object {
                "get": Object {
                  "responses": Object {
                    "200": Object {
                      "description": "OK",
                    },
                    "401": Object {
                      "description": "Unauthorized",
                    },
                    "403": Object {
                      "description": "Forbidden",
                    },
                    "404": Object {
                      "description": "Not Found",
                    },
                  },
                },
              },
              "/terms": Object {
                "get": Object {
                  "description": "Returns the elasticsearch response with matching terms (dct:subject)",
                  "responses": Object {
                    "200": Object {
                      "description": "OK",
                    },
                    "401": Object {
                      "description": "Unauthorized",
                    },
                    "403": Object {
                      "description": "Forbidden",
                    },
                    "404": Object {
                      "description": "Not Found",
                    },
                  },
                },
              },
            }
          }
        />
        <ListRegular
          bottomMargin={true}
          title="Terms and restrictions"
        >
          <TwoColRow
            col1="Terms of service"
            col2={
              <a
                href="https://fellesdatakatalog.brreg.no/about"
              >
                https://fellesdatakatalog.brreg.no/about
                <i
                  className="fa fa-external-link fdk-fa-right"
                />
              </a>
            }
          />
          <TwoColRow
            col1="License"
            col2={
              <a
                href="http://data.norge.no/nlod/no/2.0"
              >
                License of API
                <i
                  className="fa fa-external-link fdk-fa-right"
                />
              </a>
            }
          />
        </ListRegular>
        <ListRegular
          bottomMargin={true}
          title="Contact information"
        >
          <React.Fragment
            key="https://fellesdatakatalog.brreg.no"
          >
            <TwoColRow
              col1="Contact point"
              col2={
                <a
                  href="https://fellesdatakatalog.brreg.no"
                >
                  Brønnøysundregistrene
                  <i
                    className="fa fa-external-link fdk-fa-right"
                  />
                </a>
              }
            />
            <TwoColRow
              col1="Email"
              col2={
                <a
                  href="mailto:fellesdatakatalog@brreg.no"
                  rel="noopener noreferrer"
                  title="fellesdatakatalog@brreg.no"
                >
                  fellesdatakatalog@brreg.no
                </a>
              }
            />
          </React.Fragment>
        </ListRegular>
        <div
          style={
            Object {
              "height": "75vh",
            }
          }
        />
      </section>
    </div>
  </article>
</main>
`;

exports[`should render ApiDetailsPage correctly with missing api-properties 1`] = `
<main
  className="container"
  id="content"
>
  <article>
    <div
      className="row"
    >
      <div
        className="col-12 col-lg-8 offset-lg-4"
      >
        <SideEffect(DocumentMeta)
          description={null}
          title={null}
        />
        <HarvestDate
          harvest={null}
        />
        <SearchHitHeader
          nationalComponent={false}
          publisher={null}
          publisherItems={null}
          publisherLabel="Provider:"
          publisherTag="strong"
          tag="h1"
          theme={null}
          title={null}
          titleLink={null}
        />
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-12 col-lg-4 "
      >
        <StickyMenu
          menuItems={
            Array [
              Object {
                "name": "Terms and restrictions",
                "prefLabel": "Terms and restrictions",
              },
            ]
          }
        />
      </div>
      <section
        className="col-12 col-lg-8 mt-3"
      >
        <ListRegular
          bottomMargin={true}
          title="Terms and restrictions"
        >
          <TwoColRow
            col1="Terms of service"
            col2={
              <a
                href="https://fellesdatakatalog.brreg.no/about"
              >
                https://fellesdatakatalog.brreg.no/about
                <i
                  className="fa fa-external-link fdk-fa-right"
                />
              </a>
            }
          />
          <TwoColRow
            col1="License"
            col2={
              <a
                href="http://data.norge.no/nlod/no/2.0"
              >
                License of API
                <i
                  className="fa fa-external-link fdk-fa-right"
                />
              </a>
            }
          />
        </ListRegular>
        <div
          style={
            Object {
              "height": "75vh",
            }
          }
        />
      </section>
    </div>
  </article>
</main>
`;

exports[`should render ApiDetailsPage correctly with no apiItem 1`] = `""`;
